# cli_python_template

./: .envrc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  mkdocs.yml  mypy.ini  noxfile.py  pyproject.toml  ruff.toml
docs/: functions.md  index.md  test.md
src/: __init__.py
src/calc/: __init__.py  __main__.py  arithmetic_ops.py  cli.py
src/calc1/: __main__.py  cli.py
src/calc3/: cli.py
src/cli_app_jsonargparse1/: cli.py
src/common/: arithmetic_ops.py
src/web_app_flet1/: script.py
tests/: test_arithmetic_ops.py  test_cli.py
